feat: BE and FE progress with views
